fix overflow

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,3 +1,8 @@
+html,
+body {
+    overflow-x: hidden;
+}
+
 #appContainer {
     max-width: 45rem;
     padding: 0px;
